--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,15 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">=3.14"
-dependencies = ["numpy (>=2.3.5,<3.0.0)", "pillow (>=12.0.0,<13.0.0)", "matplotlib (>=3.10.7,<4.0.0)", "importlib (>=1.0.4,<2.0.0)", "colorspacious (>=1.1.2,<2.0.0)"]
+dependencies = [
+    "numpy (>=2.3.5,<3.0.0)",
+    "pillow (>=12.0.0,<13.0.0)",
+    "matplotlib (>=3.10.7,<4.0.0)",
+    "importlib (>=1.0.4,<2.0.0)",
+    "colorspacious (>=1.1.2,<2.0.0)",
+]
+license = { text = "GPL-3.0-or-later" }
+urls = { "Homepage" = "https://github.com/0thomasholland/bad-color-map" }
 
 [tool.poetry]
 packages = [{ include = "bad_color_map", from = "src" }]
